--- a/lab3/Makefile
+++ b/lab3/Makefile
@@ -2,5 +2,4 @@ compile:
 	gcc -Wall -g3 -fsanitize=address -pthread server.c -o server
 	gcc -Wall -g3 -fsanitize=address -pthread client.c -o client
 clean:
-	rm server
-	rm client
+	$(RM) server client 
