--- a/lab4/Makefile
+++ b/lab4/Makefile
@@ -1,6 +1,9 @@
-compile:
+all:
 	gcc -Wall -g3 -fsanitize=address -pthread server.c threadpool.c -o server
 	gcc -Wall -g3 -fsanitize=address -pthread client.c -o client
+
+work:
+	gcc -Wall -g3 -fsanitize=address -pthread work.c threadpool.c -o work
+	
 clean:
-	rm server
-	rm client
+	$(RM) server client
